--- a/springboot-serverless/.gitignore
+++ b/springboot-serverless/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!functions/*.jar
 
 ### STS ###
 .apt_generated
